adding some new text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="content">
-            <h1>Amazing Article</h1>
+            <h1>Awesome Article</h1>
             <small>Subham Bharadwaz</small>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum perspiciatis deserunt quaerat a praesentium quas iste, veritatis consequuntur, recusandae aperiam maxime unde minus facere architecto quibusdam odit sint minima fugit! Consectetur eligendi debitis est, tenetur nihil, perspiciatis voluptate dolor sint illum possimus, ea facere cupiditate aut laborum ipsa placeat sunt corporis sapiente animi optio. Quaerat excepturi blanditiis officia! Nulla quam quisquam unde id iste adipisci ullam ipsum labore laborum ratione, dolor laudantium repellendus cumque nam delectus dolorem quaerat amet esse vero praesentium quis earum animi mollitia reprehenderit! Cupiditate aliquam optio corporis dolores, quidem itaque molestias quisquam maiores quo vero. Soluta.</p>
             <h3>My Dog</h3>
